@@ -1,17 +1,11 @@
 package com.hbc.pms.plc.io;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.hbc.pms.plc.integration.huykka7.DataType;
-import com.hbc.pms.plc.integration.huykka7.S7VariableAddress;
-import com.hbc.pms.plc.integration.mokka7.type.AreaType;
 import lombok.Getter;
-import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 
 import java.util.List;
-import java.util.Map;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 @Getter
@@ -24,11 +18,18 @@ public class Blueprint {
 
     @Getter
     public static class SensorConfiguration {
+        private String groupId;
+        private List<Figure> figures;
+
+    }
+
+    @Getter
+    public static class Figure {
+        private String id;
         // TODO: auto calculate these 3 fields based on address
         private String dataType;
         private int offset;
         private int dataBlockNumber;
-
         @Setter
         private Point displayCoordinates;
         @Setter
@@ -43,6 +44,9 @@ public class Blueprint {
     }
 
     public List<String> getAddresses() {
-        return sensorConfigurations.stream().map(SensorConfiguration::getAddress).toList();
+        return sensorConfigurations.stream()
+            .flatMap(sensorConfiguration -> sensorConfiguration.figures.stream())
+            .map(Figure::getAddress)
+            .collect(Collectors.toList());
     }
 }
